Fix alignment.

--- a/css/linuxmuster.css
+++ b/css/linuxmuster.css
@@ -344,7 +344,7 @@ th {
 }
 
 td.lfdnr {
-    align: right;
+    text-align: right;
 }
 
 table.liste td {
